--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.1.0",
     "genius-lyrics": "^4.4.7",
     "genius-lyrics-api": "^3.2.1",
+    "he": "^1.2.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
